--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -5,18 +5,13 @@
     <div class="row">
       <div class="col-sm-3"></div>
       <div class="col-sm-6">
-        <h1>Welcome to Feline Mewsings!</h1>
-        <h3>This is a place where the cats only get more adorable! Check out our cat gallery or our cat video search engine. Make your day better.</h3>
-      </div>
+        <div class="text">
+          <h1>Welcome to Feline Mewsings!</h1>
+          <h3>This is a place where the cats only get more adorable! Check out our cat gallery or our cat video search engine. Make your day better.</h3>
+        </div>
+       </div>
       <div class="col-sm-3"></div>
     </div>
-  </div>
-  <div class="row">
-    <div class="col-sm-2"></div>
-    <div class="col-sm-8">
-      <img class="img-fluid" src="CAT1.JPG" href="google.com" alt="responsive image">
-    </div>
-    <div class="col-sm-2"></div>
   </div>
 
 </body>
