--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,1 +1,15 @@
+/*html body {
+  overflow-x: hidden;
+  overflow-y: hidden;
+  background-color:none;
+}
+#text{
+  color: blue;
+  background-color: ghostwhite;
+}
 
+li {
+  margin-top: 3em;
+  list-style: none;
+  font-family: 'Permanent Marker', cursive;
+}*/
