--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<app-nav></app-nav>
-<section>
-  <router-outlet></router-outlet>
-</section>
+<div>
+  <app-nav></app-nav>
+  <section>
+    <router-outlet></router-outlet>
+  </section>
+</div>
