--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,15 +1,40 @@
-<h1>Feline Mewsings Search</h1>
 
-<h3><input type="text" name="query" value="" /><input type="submit" name="submit" value="Submit" /></h3>
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+  <title></title>
+</head>
+<body>
+  <div class="row">
+    <div class="col-sm-4"></div>
+    <div class="col-sm-4" id="text">
+      <h1>Feline Mewsings Search</h1>
+    </div>
+    <div class="col-sm-4"></div>
+  </div>
 
+  <div class="row">
+    <div class="col-sm-4"></div>
+    <div class="col-sm-4" id="text">
+      <h3><input type="text" name="query" value="" /><input type="submit" name="submit" value="Submit" /></h3>
+    </div>
+    <div class="col-sm-4"></div>
+  </div>
+  <div class="row">
+    <div class="col-sm-4"></div>
+    <div class="col-sm-4" id="text">
+      <ul *ngIf="videos">
 
-<ul *ngIf="videos">
+        <li *ngFor="let video of videos.items">
+          <h5>{{video.snippet.title}}</h5>
+          <h5>https://www.youtube.com/embed/{{video.id.videoId}}</h5>
+          <iframe width="560" height="315" src="" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </li>
+      </ul>
+    </div>
+    <div class="col-sm-4"></div>
+  </div>
 
-  <li *ngFor="let video of videos.items">
-    <p>{{video.snippet.title}}</p>
-    <p>https://www.youtube.com/embed/{{video.id.videoId}}</p>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/"  frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  </li>
-</ul>
+  <p>{{videos.nextPageToken}}</p>
+</body>
+</html>
 
-<p>{{videos.nextPageToken}}</p>
