--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
-/* You can add global styles to this file, and also import other style files */
+/*/* You can add global styles to this file, and also import other style files */
 /*
 
 Stylesheet for Heathermurphy.tech
@@ -30,11 +30,9 @@ h1, h2, h3, h4, h5, h6 {
   overflow: hidden;
 }*/
 
-
-.img-fluid {
-  align-items: center;
-  opacity: .3;
-  border-radius: 5%;
+html{
+  background-image: url(./assets/catBackv2.png);
+  background-position: left top;
 }
 
 
