--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,15 +1,34 @@
-/*html body {
+@media only screen and (max-width: 800px) {
+
+  iframe{
+    width:auto;
+    height:auto;
+  }
+}
+
+html body {
   overflow-x: hidden;
   overflow-y: hidden;
-  background-color:none;
 }
-#text{
+#text, p{
   color: blue;
-  background-color: ghostwhite;
+  background-color: white;
 }
 
 li {
   margin-top: 3em;
   list-style: none;
   font-family: 'Permanent Marker', cursive;
-}*/
+}
+
+iframe{
+  align-content:center;
+  margin-left:70px;
+}
+
+.filler{
+  border:5px solid red;
+  height: 415px;
+  width:760px;
+  margin-left: 100px;
+}
